Race between recipientForgetMigration cmd and TenantMigrationRecipientService future chain restart on errors machinery.

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.3.0, 5.2.2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v5.2, v5.1
    • Server Serverless 2022-01-24
    • 126
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      recipientForgetMigration cmd before waiting for the task completion promise, it will try to interrupt the TenantMigrationRecipient instance. But if it is already in the interrupted state, recipientForgetMigration cmd will skip interrupt and starts to wait for the task completion promise to get fulfilled. However, if the original interrupt status is retryable error code, we would reset the task state to "running", clear interrupt status & restart the TenantMigrationRecipientService future chain. As a result of restart, the task completion promise for that recipient instance won't get fulfilled (unless the node steps down or shuts down or receives another recipientForgetMigration cmd), leading to the recipientForgetMigration cmd hang.

            Assignee:
            Suganthi Mani
            Reporter:
            Suganthi Mani
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: