SERVER-62293 Fix race between recipientForgetMigration cmd and TenantMigrationRecipientService future chain restart on errors machinery.