src/mongo/db/repl/tenant_migration_recipient_service.cpp
@@ -187,6 +187,7 @@ MONGO_FAIL_POINT_DEFINE(fpWaitUntilTimestampMajorityCommitted);
 MONGO_FAIL_POINT_DEFINE(fpAfterFetchingCommittedTransactions);
 MONGO_FAIL_POINT_DEFINE(hangAfterUpdatingTransactionEntry);
 MONGO_FAIL_POINT_DEFINE(fpBeforeAdvancingStableTimestamp);
+MONGO_FAIL_POINT_DEFINE(hangMigrationBeforeRetryCheck);
 
 namespace {
 // We never restart just the oplog fetcher.  If a failure occurs, we restart the whole state machine
@@ -2112,9 +2113,7 @@ void TenantMigrationRecipientService::Instance::_interrupt(Status status,
     stdx::lock_guard lk(_mutex);
 
     if (skipWaitingForForgetMigration) {
-        // We only get here on receiving the recipientForgetMigration command or on
-        // stepDown/shutDown. On receiving the recipientForgetMigration, the promise should have
-        // already been set.
+        // We only get here on stepDown/shutDown.
         setPromiseErrorifNotReady(lk, _receivedRecipientForgetMigrationPromise, status);
     }
 
@@ -2147,8 +2146,7 @@ void TenantMigrationRecipientService::Instance::_interrupt(Status status,
         }
     }
 
-    _taskState.setState(
-        TaskState::kInterrupted, status, skipWaitingForForgetMigration /* isExternalInterrupt */);
+    _taskState.setState(TaskState::kInterrupted, status);
 }
 
 void TenantMigrationRecipientService::Instance::interrupt(Status status) {
@@ -2728,17 +2726,30 @@ SemiFuture<void> TenantMigrationRecipientService::Instance::run(
            })
         .until([this, self = shared_from_this()](
                    StatusOrStatusWith<TenantOplogApplier::OpTimePair> applierStatus) {
-            auto status = applierStatus.getStatus();
-            stdx::unique_lock lk(_mutex);
-            if (_taskState.isInterrupted()) {
-                status = _taskState.getInterruptStatus();
-            }
+            hangMigrationBeforeRetryCheck.pauseWhileSet();
 
-            // shard merge is not resumable for any replica set state transitions or network errors
-            if (_stateDoc.getProtocol() != MigrationProtocolEnum::kShardMerge &&
-                (ErrorCodes::isRetriableError(status) || isRetriableOplogFetcherError(status)) &&
-                !_taskState.isExternalInterrupt() &&
-                _stateDocPersistedPromise.getFuture().isReady()) {
+            auto shouldRetryMigration = [&](WithLock, Status status) -> bool {
+                // Shard merge is not resumable for any replica set state transitions or network
+                // errors.
+                if (getProtocol() == MigrationProtocolEnum::kShardMerge)
+                    return false;
+
+                // We shouldn't retry migration after receiving the recipientForgetMigration command
+                // or on stepDown/shutDown.
+                if (_receivedRecipientForgetMigrationPromise.getFuture().isReady())
+                    return false;
+
+                if (!_stateDocPersistedPromise.getFuture().isReady())
+                    return false;
+
+                return ErrorCodes::isRetriableError(status) || isRetriableOplogFetcherError(status);
+            };
+
+            stdx::unique_lock lk(_mutex);
+            auto status = _taskState.isInterrupted() ? _taskState.getInterruptStatus()
+                                                     : applierStatus.getStatus();
+
+            if (shouldRetryMigration(lk, status)) {
                 // Reset the task state and clear the interrupt status.
                 if (!_taskState.isRunning()) {
                     _taskState.setState(TaskState::kRunning);
